k8s/loadtest/lgtm-loadtest-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lgtm
spec:
  template:
    spec:
      nodeSelector:
        peak-booking/node-role: lgtm
