k8s/loadtest/mysql-loadtest-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  template:
    spec:
      nodeSelector:
        peak-booking/node-role: mysql
